--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 
    <form>
 <div class="habits">
-  <div class="habit" data-name="run">🏃‍♂️</div>
-  <div class="habit" data-name="water">💧</div>
-  <div class="habit" data-name="food">🍎</div>
-  <div class="habit" data-name="journal">📰</div>
-  <div class="habit" data-name="takePills">💊</div>
-  <div class="habit" data-name="sleep">💤</div>
+  <div class="habit" data-name="run">🏋️‍♀️</div>
+  <div class="habit" data-name="water">🐕</div>
+  <div class="habit" data-name="food">📚</div>
+  <div class="habit" data-name="journal">👨‍🎓</div>
+  
+  
 </div>
 
 <div class="days">
